fixe overflow in mobile view

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -607,8 +607,12 @@ video {
   bottom: 0px;
 }
 
-.top-0{
-  top: 0px;
+.right-0{
+  right: 0px;
+}
+
+.top-14{
+  top: 3.5rem;
 }
 
 .left-0{
@@ -619,24 +623,36 @@ video {
   left: -1rem;
 }
 
-.-bottom-24{
-  bottom: -6rem;
+.top-24{
+  top: 6rem;
 }
 
-.right-0{
-  right: 0px;
+.top-44{
+  top: 11rem;
 }
 
-.z-20{
-  z-index: 20;
+.bottom-0{
+  bottom: 0px;
 }
 
-.z-0{
-  z-index: 0;
+.bottom-12{
+  bottom: 3rem;
+}
+
+.top-80{
+  top: 20rem;
+}
+
+.top-96{
+  top: 24rem;
 }
 
 .-z-10{
   z-index: -10;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .mx-auto{
@@ -670,6 +686,26 @@ video {
 
 .mr-4{
   margin-right: 1rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mb-24{
+  margin-bottom: 6rem;
 }
 
 .block{
@@ -811,6 +847,30 @@ video {
   padding-right: 0.75rem;
 }
 
+.pt-24{
+  padding-top: 6rem;
+}
+
+.pt-16{
+  padding-top: 4rem;
+}
+
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
+}
+
 .text-right{
   text-align: right;
 }
@@ -857,6 +917,21 @@ video {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
+.text-blue-400{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -882,7 +957,8 @@ video {
   background-image: linear-gradient(to bottom, #5e83ff 0%, #2e33f1 51%);
 }
 
-body {
+body,
+svg {
   overflow-x: hidden;
 }
 
@@ -972,6 +1048,16 @@ body {
   transform: scale(1.1);
 }
 
+.hero_backdrop_left {
+  width: 500px;
+  height: 500px;
+}
+
+.hero_backdrop_right {
+  width: 400px;
+  height: 400px;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .hero_banner {
     transform: scale(1.1);
@@ -979,6 +1065,16 @@ body {
 }
 
 @media screen and (max-width: 767px) {
+  .hero_backdrop_left {
+    width: 200px;
+    height: 200px;
+  }
+
+  .hero_backdrop_right {
+    width: 400px;
+    height: 400px;
+  }
+
   .features_title {
     font-size: 20px;
   }
@@ -1039,10 +1135,6 @@ body {
 }
 
 @media (min-width: 768px){
-  .md\:top-24{
-    top: 6rem;
-  }
-
   .md\:top-12{
     top: 3rem;
   }
@@ -1053,6 +1145,14 @@ body {
 
   .md\:mr-12{
     margin-right: 3rem;
+  }
+
+  .md\:mb-12{
+    margin-bottom: 3rem;
+  }
+
+  .md\:mb-8{
+    margin-bottom: 2rem;
   }
 
   .md\:block{
@@ -1083,6 +1183,11 @@ body {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -1090,13 +1195,50 @@ body {
     margin-bottom: 2rem;
   }
 
+  .lg\:mb-6{
+    margin-bottom: 1.5rem;
+  }
+
+  .lg\:mt-6{
+    margin-top: 1.5rem;
+  }
+
+  .lg\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .lg\:pt-16{
+    padding-top: 4rem;
+  }
+
+  .lg\:pt-12{
+    padding-top: 3rem;
+  }
+
+  .lg\:pt-10{
+    padding-top: 2.5rem;
+  }
+
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px){
+  .xl\:pt-14{
+    padding-top: 3.5rem;
+  }
+
+  .xl\:pt-16{
+    padding-top: 4rem;
+  }
+
   .xl\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
